<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reservation_seats"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reservationseats.ReservationSeatsFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reservation_screen_placeholder"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@color/grey"
        android:layout_marginVertical="8dp"
        android:textSize="6pt" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seats_recyclerview" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_seats_btn"
            android:layout_marginHorizontal="4dp"
            android:text="@string/confirm"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_seats_btn"
            android:layout_marginHorizontal="4dp"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>